fix: checkbox style on ios safari

--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -309,7 +309,12 @@ html.dark {
 
 input[type='checkbox'] {
   position: relative;
-  margin: 0 1rem 0 0;
+  appearance: none;
+  padding: 0 6px 0 0;
+  height: 1rem;
+  width: 1rem;
+  display: inline-block;
+  box-sizing: content-box;
 }
 
 input[type='checkbox']:before {
